This is the ChangeLog of the clone project

Created by Dr. Rolf Jansen on 2013-02-19.
Copyright (c) 2013. All rights reserved.

Note: Milestones are embraced by ••••


2013-02-20 11:00  rj - r35

   * clone.c:
     - if the file size changed in-between scheduling and copying, then most probably
       other file attributes changed too, so lstat() the source again.
     - set version to 1.0.1

2013-02-20 01:08  rj - r34

   * clone.c:
     - on reading and writing, check only for real errors,
       e.g., an actual file size difference counts not as error.

2013-02-19 12:35  rj - r33

   * ChangeLog:
     - entry r32: corrected timestamp 06:18 to 12:18
     - entry r28: rights and obligations has been transferred from Cyclaero Ltda. to Dr. Rolf Jansen.

2013-02-19 12:18  rj - r32

   * ChangeLog, clone.c:
     - added ChangeLog
     - set version to 1.0.1b

2013-02-18 18:54  rj - r31

   * Makefile, clone.xcodeproj/project.pbxproj:
     - switched back to the former method of obtaining the svn revision on update.

2013-02-18 18:28  rj - r30

   * clone.xcodeproj/project.pbxproj, utils.c:
     - minor polishing

2013-02-17 23:08  rj - r29

   * clone.c, utils.c, utils.h:
     - move setAttributes() out of the conditional compiling section, i.e. making it common.
     - instead, rename setTimes() to setTimesFlags() and move it into the conditional compiling section.
     - On Mac OS X, the flags need to be set before the times, and on FreeBSD the flags
       need to be set after the times -- in this respect, nothing has changed for FreeBSD.
     - some minor code formatting.

2013-02-17 12:40  rj - r28

   * Makefile, clone.1, clone.c, utils.c, utils.h:
     - Herewith, transferred all rights and obligations on the clone project, including
       copyright, from the Legal Entity Cyclaero Ltda. to the Natural Person Dr. Rolf Jansen.

2013-02-15 00:45  rj - r27

   * clone.c, utils.c:
     - on Mac OS X, setTimes() must be the last call in setAttributes.